--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="row justify-content-md-center">
         <div class="col-md-4">
             <img src="assets/images/logo.png" width="150px" class="user-avatar" />
-            <h1>Dream Investments</h1>
+            <h1>Autocoin</h1>
             <form role="form">
                 <div class="form-content">
                     <div class="form-group">
