--- a/src/app/shared/modules/page-header/page-header.component.html
+++ b/src/app/shared/modules/page-header/page-header.component.html
@@ -5,8 +5,13 @@
         </h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <i class="fa fa-dashboard"></i> <a href="Javascript:void(0)" [routerLink]="['/dashboard']">Dashboard</a>
+                <i class="fa fa-dashboard"></i> <a [routerLink]="['/dashboard']">Dashboard</a>
             </li>
+
+            <li class="breadcrumb-item" *ngFor="let parent of parents">
+                <i class="fa fa-{{ parent.icon }}"></i> <a [routerLink]="[parent.link]">{{ parent.heading }}</a>
+            </li>
+            
             <li class="breadcrumb-item active"><i class="fa {{icon}}"></i> {{heading}}</li>
         </ol>
     </div>
