--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -7,6 +7,7 @@
     overflow-y: scroll;
     position: relative;
     overflow: hidden;
+    min-height: calc(100vh - 56px);
 }
 @media screen and (max-width: 992px) {
     .main-container {
