--- a/src/app/layout/users/users.component.html
+++ b/src/app/layout/users/users.component.html
@@ -26,8 +26,8 @@
                 </span>
               </td>
               <td>
-                <a [routerLink]="['/users/edit', user.id]" class="btn btn-success btn-sm">Edit</a>
-                <a (click)="userDelete.destroy(user)" class="btn btn-danger btn-sm">Delete</a>
+                <button [routerLink]="['/users/edit', user.id]" class="btn btn-success btn-sm">Edit</button>
+                <button (click)="userDelete.destroy(user)" class="btn btn-danger btn-sm">Delete</button>
               </td>
           </tr>
           
