--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+
+$blue:    #2980b9 !default;
+$indigo:  #8e44ad !default;
+$purple:  #9b59b6 !default;
+$pink:    #F47983 !default;
+$red:     #e74c3c !default;
+$orange:  #e67e22 !default;
+$yellow:  #f1c40f !default;
+$green:   #2ecc71 !default;
+$teal:    #1abc9c !default;
+$cyan:    #3498db !default;
+
 @import "bootstrap/bootstrap";
 @import "spinner";
 @import "utils";
