--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -92,4 +92,8 @@ $topnav-background-color: #222;
         border-radius: 50%;
         border: 2px solid #fff;
     }
+
+    .btn:disabled {
+        pointer-events:none;
+    }
 }
