--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,17 +3,18 @@
         <div class="col-md-4">
             <img src="assets/images/logo.png" width="150px" class="user-avatar" />
             <h1>Autocoin</h1>
-            <form role="form">
+            <form ngForm role="form" (ngSubmit)="onLogIn(loginForm)" #loginForm="ngForm">
                 <div class="form-content">
                     <div class="form-group">
-                        <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email">
+                        <input ngModel type="text" name="email" class="form-control input-underline input-lg" id="email" placeholder="Email" required email>
                     </div>
 
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+                        <input ngModel type="password" name="password" class="form-control input-underline input-lg" id="password" placeholder="Password" required>
                     </div>
                 </div>
-                <a class="btn rounded-btn" [routerLink]="['/dashboard']" (click)="onLoggedin()"> Log in </a>
+                <button type="submit" class="btn rounded-btn" [disabled]="loginForm.invalid"> Log in </button>
+                <!-- <a class="btn rounded-btn" [routerLink]="['/dashboard']"> Log in </a> -->
                 &nbsp;
                 <!-- <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a> -->
             </form>
