--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -8,6 +8,10 @@
             <i class="fa fa-fw fa-users"></i>&nbsp;{{ 'Users' | translate }}
         </a>
 
+        <a routerLink="/wallets" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-money"></i>&nbsp;{{ 'Wallets' | translate }}
+        </a>
+
         <a routerLink="/orders" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-calendar"></i>&nbsp;{{ 'Open orders' | translate }}
         </a>
