--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -1,13 +1,16 @@
 <div [@routerTransition]>
-  <app-page-header [heading]="'Open orders'" [icon]="'fa-calendar'"></app-page-header>
+  <app-page-header [heading]="'Wallets'" [icon]="'fa-money'"></app-page-header>
   
+
+  <ng-container *ngFor="let user of users | async">
+
   <div class="card mb-3">
-    <div class="card-header">Orders</div>
+    <div class="card-header">{{ user.userName }}</div>
     <table class="card-body table table-hover">
         <thead>
           <tr>
               <th>#</th>
-              <th>Exchange</th>
+              <!-- <th>Exchange</th>
               <th>Order ID</th>
               <th>Currency pair</th>
               <th>Type</th>
@@ -15,20 +18,17 @@
               <th>Amount</th>
               <th>Price</th>
               <th>Date</th>
-              <th>Actions</th>
+              <th>Actions</th> -->
           </tr>
         </thead>
         <tbody>
 
-          <ng-container *ngFor="let user of sortedUsers | async">
-            <tr>
-              <th colspan="10">{{ user.userName }}</th>
+          
+            
 
-            </tr>
-
-            <tr *ngFor="let order of ordersForUser(user)">
+            <!-- <tr *ngFor="let order of ordersForUser(user); let i = index">
                 <th>
-                  <input type="checkbox">
+                  {{ i + 1 }}
                 </th>
                 <td>
                   {{ order.exchangeName }}
@@ -60,12 +60,13 @@
             </tr>
             <tr *ngIf="ordersForUser(user).length == 0">
                 <td colspan="10">No open orders</td>
-            </tr>
-          </ng-container>
+            </tr> -->
+          
           
         </tbody>
     </table>
   </div>
-</div>
 
-<app-order-delete #orderDelete></app-order-delete>
+  </ng-container>
+
+</div>
