api creating and deleting clients

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -4,8 +4,8 @@
             <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'Dashboard' | translate }}
         </a>
         
-        <a routerLink="/users" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-users"></i>&nbsp;{{ 'Users' | translate }}
+        <a routerLink="/clients" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-users"></i>&nbsp;{{ 'Clients' | translate }}
         </a>
 
         <a routerLink="/wallets" [routerLinkActive]="['router-link-active']" class="list-group-item">
