hide wallets mock view

--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -2,15 +2,15 @@
   <app-page-header [heading]="'Wallets'" [icon]="'fa-money'"></app-page-header>
   
 
-  <ng-container *ngFor="let user of clients | async">
+  <ng-container>
 
-  <div class="card mb-3">
+  <!-- <div class="card mb-3">
     <div class="card-header">{{ user.userName }}</div>
     <table class="card-body table table-hover">
         <thead>
           <tr>
               <th>#</th>
-              <!-- <th>Exchange</th>
+              <th>Exchange</th>
               <th>Order ID</th>
               <th>Currency pair</th>
               <th>Type</th>
@@ -18,10 +18,10 @@
               <th>Amount</th>
               <th>Price</th>
               <th>Date</th>
-              <th>Actions</th> -->
+              <th>Actions</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody> -->
 
           
             
@@ -63,10 +63,10 @@
             </tr> -->
           
           
-        </tbody>
+        <!-- </tbody>
     </table>
   </div>
 
-  </ng-container>
+  </ng-container> -->
 
 </div>
