--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -2,9 +2,9 @@
   <app-page-header [heading]="'Wallets'" [icon]="'fa-money'"></app-page-header>
   
 
-  <ng-container>
+  <!-- <ng-container>
 
-  <!-- <div class="card mb-3">
+  <div class="card mb-3">
     <div class="card-header">{{ user.userName }}</div>
     <table class="card-body table table-hover">
         <thead>
