--- a/src/app/layout/orders/orders.component.html
+++ b/src/app/layout/orders/orders.component.html
@@ -1,6 +1,6 @@
 <div [@routerTransition]>
   <app-page-header [heading]="'Open orders'" [icon]="'fa-calendar'"></app-page-header>
-  
+
   <div class="card mb-3">
     <div class="card-header">Orders</div>
     <table class="card-body table table-hover">
@@ -23,7 +23,6 @@
           <ng-container *ngFor="let user of sortedUsers | async">
             <tr>
               <th colspan="10">{{ user.userName }}</th>
-
             </tr>
 
             <tr *ngFor="let order of ordersForUser(user)">
@@ -37,7 +36,7 @@
                   {{ order.orderId }}
                 </td>
                 <td>
-                  {{ order.currencyPair().symbol() }}
+                  {{ order.currencyPairSymbol() }}
                 </td>
                 <td>
                   {{ order.orderType }}
@@ -62,7 +61,7 @@
                 <td colspan="10">No open orders</td>
             </tr>
           </ng-container>
-          
+
         </tbody>
     </table>
   </div>
