--- a/src/app/layout/orders/orders.component.html
+++ b/src/app/layout/orders/orders.component.html
@@ -20,12 +20,12 @@
         </thead>
         <tbody>
 
-          <ng-container *ngFor="let user of sortedUsers | async">
+          <ng-container *ngFor="let client of sortedClients | async">
             <tr>
-              <th colspan="10">{{ user.userName }}</th>
+              <th colspan="10">{{ client.name }}</th>
             </tr>
 
-            <tr *ngFor="let order of ordersForUser(user)">
+            <tr *ngFor="let order of ordersForClient(client)">
                 <th>
                   <input type="checkbox">
                 </th>
@@ -57,7 +57,7 @@
                   <button (click)="orderDelete.destroy(order)" class="btn btn-danger btn-sm">Cancel</button>
                 </td>
             </tr>
-            <tr *ngIf="ordersForUser(user).length == 0">
+            <tr *ngIf="ordersForClient(client).length == 0">
                 <td colspan="10">No open orders</td>
             </tr>
           </ng-container>
