--- a/src/app/layout/orders/orders.component.html
+++ b/src/app/layout/orders/orders.component.html
@@ -52,7 +52,7 @@
                         {{ order.price }}
                     </td>
                     <td>
-                        {{ order.timestamp * 1000 | date: 'y-MM-dd HH:mm:ss' }}
+                        {{ order.timestamp | date: 'y-MM-dd HH:mm:ss' }}
                     </td>
                     <td>
                         <button (click)="cancelOpenOrder(order)" class="btn btn-danger btn-sm">Cancel</button>
