--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -1,72 +1,35 @@
 <div [@routerTransition]>
-  <app-page-header [heading]="'Wallets'" [icon]="'fa-money'"></app-page-header>
-  
-
-  <!-- <ng-container>
-
-  <div class="card mb-3">
-    <div class="card-header">{{ user.userName }}</div>
-    <table class="card-body table table-hover">
-        <thead>
-          <tr>
-              <th>#</th>
-              <th>Exchange</th>
-              <th>Order ID</th>
-              <th>Currency pair</th>
-              <th>Type</th>
-              <th>Status</th>
-              <th>Amount</th>
-              <th>Price</th>
-              <th>Date</th>
-              <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody> -->
-
-          
-            
-
-            <!-- <tr *ngFor="let order of ordersForUser(user); let i = index">
-                <th>
-                  {{ i + 1 }}
-                </th>
-                <td>
-                  {{ order.exchangeName }}
-                </td>
-                <td>
-                  {{ order.orderId }}
-                </td>
-                <td>
-                  {{ order.currencyPair().symbol() }}
-                </td>
-                <td>
-                  {{ order.orderType }}
-                </td>
-                <td>
-                  {{ order.orderStatus }}
-                </td>
-                <td>
-                  {{ order.orderedAmount }}
-                </td>
-                <td>
-                  {{ order.price }}
-                </td>
-                <td>
-                  {{ order.timestamp * 1000 | date: 'y-MM-dd HH:mm:ss' }}
-                </td>
-                <td>
-                  <button (click)="orderDelete.destroy(order)" class="btn btn-danger btn-sm">Cancel</button>
-                </td>
+    <app-page-header [heading]="'Wallets'" [icon]="'fa-money'"></app-page-header>
+    <div class="card mb-3">
+        <table class="card-body table table-hover">
+            <thead>
+            <tr>
+                <th>Client</th>
+                <th>Exchange</th>
+                <th>Currency</th>
+                <th>Available amount</th>
+                <th>When refreshed</th>
+                <th>Action</th>
             </tr>
-            <tr *ngIf="ordersForUser(user).length == 0">
-                <td colspan="10">No open orders</td>
-            </tr> -->
-          
-          
-        <!-- </tbody>
-    </table>
-  </div>
+            </thead>
+            <tbody>
+            <ng-container *ngFor="let client of clients">
+                <tr>
+                    <th colspan="10">
+                        <button (click)="fetchExchangeBalancesForClient(client)"><i class="fa fa-trash-o"></i>Refresh</button>
+                    </th>
+                    <th colspan="10">{{ client.name }}</th>
+                    <th colspan="10">Last refresh: {{ getLastRefreshTime(client) | date: 'y-MM-dd HH:mm:ss' || '-' }}</th>
+                </tr>
+                <tr *ngFor="let exchangeBalance of exchangeBalancesForClient(client)">
 
-  </ng-container> -->
-
+                    <th>{{ exchangeBalance.exchangeName }}</th>
+                    <td *ngIf="exchangeBalance.errorMessage != null">{{ exchangeBalance.errorMessage }}</td>
+                    <td *ngIf="exchangeBalance.errorMessage == null">{{ exchangeBalance.currencyCode }}</td>
+                    <td *ngIf="exchangeBalance.errorMessage == null">{{ exchangeBalance.available }}</td>
+                </tr>
+            </ng-container>
+            </tbody>
+        </table>
+    </div>
 </div>
