--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -12,6 +12,10 @@
             <i class="fa fa-fw fa-money"></i>&nbsp;{{ 'Wallets' | translate }}
         </a>
 
+        <a routerLink="/automation" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-magic"></i>&nbsp;{{ 'Automation' | translate }}
+        </a>
+
         <a routerLink="/orders" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-calendar"></i>&nbsp;{{ 'Open orders' | translate }}
         </a>
