Hide automation in sidebar

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <a routerLink="/dashboard" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'Dashboard' | translate }}
         </a>
-        
+
         <a routerLink="/clients" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-users"></i>&nbsp;{{ 'Clients' | translate }}
         </a>
@@ -12,7 +12,7 @@
             <i class="fa fa-fw fa-money"></i>&nbsp;{{ 'Wallets' | translate }}
         </a>
 
-        <a routerLink="/automation" [routerLinkActive]="['router-link-active']" class="list-group-item">
+        <a routerLink="/automation" [routerLinkActive]="['router-link-active']" class="list-group-item" class="d-none">
             <i class="fa fa-fw fa-magic"></i>&nbsp;{{ 'Automation' | translate }}
         </a>
 
@@ -23,7 +23,7 @@
         <a routerLink="/settings" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-cog"></i>&nbsp;{{ 'Settings' | translate }}
         </a>
-        
-        
+
+
     </div>
 </nav>
