--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
             <i class="fa fa-fw fa-money"></i>&nbsp;{{ 'Wallets' | translate }}
         </a>
 
-        <a routerLink="/automation" [routerLinkActive]="['router-link-active']" class="list-group-item" class="d-none">
+        <a routerLink="/automation" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-magic"></i>&nbsp;{{ 'Automation' | translate }}
         </a>
 
