--- a/src/app/layout/automation/automation.component.html
+++ b/src/app/layout/automation/automation.component.html
@@ -2,7 +2,11 @@
 
 <div class="card mb-3" *ngFor="let exchange of exchanges">
     <div class="card-header">
-        {{ exchange.name }}
+        <div class="row justify-content-between align-items-center px-2">
+            <span>{{ exchange.name }}</span>
+
+            <a [routerLink]="['/automation/make-order', exchange.name]" class="btn btn-success">Add stretegy execution order</a>
+        </div>
     </div>
     <table class="card-body table table-hover">
         <thead>
