rename make strategy execution component (in progress)

--- a/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
+++ b/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
@@ -37,7 +37,7 @@
       </div>
   </div>
 
-  <button type="submit" class="btn btn-primary" (click)="showConfirmModal()" [disabled]="! canMakeOrder()">Add strategy execution</button>
+  <button type="submit" class="btn btn-primary" (click)="showConfirmModal()" [disabled]="! canMakeStrategyExecution()">Add strategy execution</button>
 
 </form>
 
