--- a/src/app/layout/automation/automation.component.html
+++ b/src/app/layout/automation/automation.component.html
@@ -5,7 +5,7 @@
         <div class="row justify-content-between align-items-center px-2">
             <span>{{ exchange.name }}</span>
 
-            <a [routerLink]="['/automation/make-order', exchange.name]" class="btn btn-success">Add stretegy execution order</a>
+            <a [routerLink]="['/automation/make-strategy-execution', exchange.name]" class="btn btn-success">Add stretegy execution order</a>
         </div>
     </div>
     <table class="card-body table table-hover">
