send request order

--- a/src/app/layout/automation/automation.component.html
+++ b/src/app/layout/automation/automation.component.html
@@ -16,7 +16,9 @@
         </tr>
         </thead>
         <tbody>
-
+            <tr *ngFor="let strategyExecution of getStrategiesExecutionsByExchangeName(exchange.name)">
+                <td>{{ strategyExecution | json }}</td>
+            </tr>
         
 
         </tbody>
