--- a/src/app/layout/automation/automation.component.html
+++ b/src/app/layout/automation/automation.component.html
@@ -12,12 +12,15 @@
         <thead>
         <tr>
             <th>#</th>
-            
+            <th></th>
         </tr>
         </thead>
         <tbody>
             <tr *ngFor="let strategyExecution of getStrategiesExecutionsByExchangeName(exchange.name)">
                 <td>{{ strategyExecution | json }}</td>
+                <td>
+                    <button (click)="deleteStrategyExecution(strategyExecution)" class="btn btn-danger">Delete</button>
+                </td>
             </tr>
         
 
